--- a/src/components/CustomButton/CustomButton.styles.scss
+++ b/src/components/CustomButton/CustomButton.styles.scss
@@ -9,7 +9,7 @@
   color: white;
   background-color: black;
   text-transform: uppercase;
-  font-family: 'Roboto, sans-serif';
+  font-family: 'Roboto';
   font-weight: 300;
   border: none;
   cursor: pointer;
