--- a/src/components/CartDropdown/CartDropdown.styles.scss
+++ b/src/components/CartDropdown/CartDropdown.styles.scss
@@ -11,6 +11,11 @@
   right: 0;
   z-index: 5;
 
+  .empty-message {
+    font-size: 18px;
+    margin: 50px auto;
+  }
+
   .cart-items {
     height: 400px;
     display: flex;
